--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
     </div>
     <script src="app.js"></script>
+    <footer>made by Mariem Ben Messaoud</footer>
 </body>
 
 </html>
